tests/error/modifier_errors/flags_nested_combined_outer.err
Error: Unitary constraint violation (at $FILE:15:12)
   | 
13 |     with control(ctrl), dagger:
14 |         with power(2):
15 |             foo(q)
   |             ^^^^^^ This function cannot be called in a unitary context

Guppy compilation failed due to 1 previous error
